# docs/swagger.json
@@ -874,6 +874,12 @@
                         "description": "Items Per Page",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search product by name",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
